<resources>
    <string name="app_name">4 Qul</string>
    <string name="drawer_subheading">4 Qul Recitation</string>
    <string name="version">Version 1.0</string>
    <string name="notification_msg">Watch 4 Qul Beautiful Recitation NOW</string>

    <!--Testing Admob ads-->
    <string name="admob_banner_main">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_banner_content">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_dashboard">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_interstitial_splash">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ads">ca-app-pub-3940256099942544/6300978111</string>

    <!--Orignal Admob ads-->

    <!--    <string name="admob_banner_main">ca-app-pub-4587822745173962/7882501333</string>
    <string name="admob_banner_content">ca-app-pub-4587822745173962/9359234535</string>
    <string name="admob_interstitial_dashboard">ca-app-pub-4587822745173962/1835967736</string>
    <string name="admob_interstitial_splash">ca-app-pub-4587822745173962/3312700931</string>
    <string name="banner_ads">ca-app-pub-1775023839671556/9427143868</string>
    -->


    <string name="share_message">Download the Best Application of 4 Qul Recitation– Free, Download Now! at:\nhttps://play.google.com/store/apps/details?id=com.FourQul</string>

    <string name="home">Home</string>
    <string name="all_qul">All Qul</string>
    <string name="all_videos_urdu"><b>4 Qul Recitation\n4 قل</b></string>
    <string name="all_videos_arabic"><b>4 Qul\nwith Translation</b></string>
    <string name="trending">Latest Videos</string>
    <string name="favorites">Favorite Videos</string>
    <string name="settings">Settings</string>
    <string name="share_app">Share App</string>
    <string name="feedback">Feedback</string>
    <string name="more_apps">More Apps</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Settings</string>
    <string name="title_section3">About Us</string>

    <string name="search_title">Search all...</string>
    <string name="search_hint">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="emptyVideoListText">No Vidoes</string>
    <string name="title_activity_video"></string>
    <string name="title_activity_main2"></string>
    <string name="favourite">Favourite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="company_name"></string>
    <string name="pref_notfications">Notifications</string>
    <string name="pref_summary_notif_daily">Show a daily notification at 9 PM</string>
    <string name="pref_title_notif_daily">Daily Notification</string>
    <string name="pref_summary_notif_weekly">Weekly notification on Sunday 9 AM</string>
    <string name="pref_title_notif_weekly">Weekly Notification</string>
    <string name="company_email">info@guidedkeys.com</string>
    <string name="surah_al_kafirun">Surah Al Kafirun</string>
    <string name="surah_al_ikhlas">Surah Al Ikhlas</string>
    <string name="surah_al_falaq">Surah Al Falaq</string>
    <string name="surah_al_nas">Surah Al Nas</string>
    <string name="offered_by_guided_keys">Offered By Guided Keys</string>
    <string name="audio_and_translation">[ Audio and Translation ]</string>
    <string name="four_qul_of_quran">Four Qul Of Quran</string>
    <string name="version_2_0">Version 2.0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--TODO: QUL NAMES-->
    <string-array name="qul_names">
        <item>Al Kafirun</item>
        <item>Al Ikhlas</item>
        <item>Al Falaq</item>
        <item>Al Nas</item>
    </string-array>

    <!--TODO: QUL ENGLISH NAME TRANSLATION-->
    <string-array name="qul_name_enlish_translatin">
        <item>The Disbelievers</item>
        <item>Fidelity or Sincerity</item>
        <item>Daybreak</item>
        <item>Mankind</item>
    </string-array>

    <!--TODO: 4 QUL ARABIC TEXT -->
    <string-array name="qul_arabic_text">
        <item>وَلَا أَنْتُمْ عَابِدُونَ مَا أَعْبُدُ,وَلَا أَنَا عَابِدٌ مَا عَبَدْتُمْ,وَلَا أَنْتُمْ عَابِدُونَ مَا أَعْبُدُ,لَا أَعْبُدُ مَا تَعْبُدُونَ, ِ قُلْ يَا أَيُّهَا الْكَافِرُونَ</item>
    </string-array>

</resources>
