<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:padding="5dp">

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_qul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cccccc"
        android:visibility="gone"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ads">

    </com.google.android.gms.ads.AdView>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"

        />

    <LinearLayout
        android:id="@+id/layout_al_kafirun"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <TextView
            android:id="@+id/tv_al_kafirun"
            style="@style/index_text_style"
            android:onClick="GoToSingleQual"
            android:tag="0"
            android:text="@string/surah_al_kafirun" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"

            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"

        />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"

        />

    <LinearLayout
        android:id="@+id/layout_al_ikhlas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <TextView
            android:id="@+id/tv_al_ikhlas"
            style="@style/index_text_style"
            android:onClick="GoToSingleQual"
            android:tag="0"
            android:text="@string/surah_al_ikhlas" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"

            />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"

        />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"

        />

    <LinearLayout
        android:id="@+id/layout_al_falaq"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <TextView
            android:id="@+id/tv_al_falaq"
            style="@style/index_text_style"
            android:onClick="GoToSingleQual"
            android:tag="0"
            android:text="@string/surah_al_falaq" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"

            />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"

        />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"

        />

    <LinearLayout
        android:id="@+id/layout_al_nas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <TextView
            android:id="@+id/tv_al_nas"
            style="@style/index_text_style"
            android:onClick="GoToSingleQual"
            android:tag="0"
            android:text="@string/surah_al_nas" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"

            />
    </LinearLayout>

</LinearLayout>